cmake_minimum_required(VERSION 3.28)
project(test)

set(CMAKE_CXX_STANDARD 17)

add_executable(test main.cpp
        punteros.cpp
        punteros.cpp
        dynamicMemory.cpp
        BubbleSort.cpp
        BubbleSort.cpp
        SelectionSort.cpp
        SelectionSort.cpp
        LinkedList.cpp
        LinkedList.cpp
        QuickSort.cpp)
